parser/y.output

state 0
	$accept: .input $end 

	SELECT  shift 9
	PRAGMA  shift 5
	.  error

	input  goto 1
	select_stmt  goto 2
	pragma_stmt  goto 3
	select_compound  goto 4
	select_core  goto 6
	select_select  goto 7
	select_select_head  goto 8

state 1
	$accept:  input.$end 

	$end  accept
	.  error


state 2
	input:  select_stmt.    (1)

	.  reduce 1 (src line 35)


state 3
	input:  pragma_stmt.    (2)

	.  reduce 2 (src line 36)


state 4
	select_stmt:  select_compound.select_order select_limit_offset 
	select_order: .    (5)

	ORDER  shift 11
	.  reduce 5 (src line 50)

	select_order  goto 10

state 5
	pragma_stmt:  PRAGMA.expression ASSIGN expression 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expression  goto 12
	expr  goto 13
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 6
	select_compound:  select_core.    (17)
	select_compound:  select_core.compound_operator select_compound 

	UNION  shift 36
	INTERSECT  shift 37
	EXCEPT  shift 38
	.  reduce 17 (src line 84)

	compound_operator  goto 35

state 7
	select_core:  select_select.select_from select_where select_group_having 
	select_from: .    (31)

	FROM  shift 40
	.  reduce 31 (src line 118)

	select_from  goto 39

state 8
	select_select:  select_select_head.select_select_tail 
	select_select_tail: .    (42)

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	AS  shift 43
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  reduce 42 (src line 144)

	expression  goto 42
	select_select_tail  goto 41
	expr  goto 13
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 9
	select_select_head:  SELECT.    (39)
	select_select_head:  SELECT.ALL 
	select_select_head:  SELECT.DISTINCT 

	DISTINCT  shift 45
	ALL  shift 44
	.  reduce 39 (src line 139)


state 10
	select_stmt:  select_compound select_order.select_limit_offset 
	select_limit_offset: .    (7)

	LIMIT  shift 48
	.  reduce 7 (src line 54)

	select_limit_offset  goto 46
	select_limit  goto 47

state 11
	select_order:  ORDER.BY sorting_list 

	BY  shift 49
	.  error


state 12
	pragma_stmt:  PRAGMA expression.ASSIGN expression 

	ASSIGN  shift 50
	.  error


state 13
	expression:  expr.    (46)
	expression:  expr.QUESTION expression COLON expression 
	expr:  expr.PLUS expr 
	expr:  expr.MINUS expr 
	expr:  expr.MULT expr 
	expr:  expr.DIV expr 
	expr:  expr.AND expr 
	expr:  expr.OR expr 
	expr:  expr.EQ expr 
	expr:  expr.LT expr 
	expr:  expr.LTE expr 
	expr:  expr.GT expr 
	expr:  expr.GTE expr 
	expr:  expr.NE expr 
	expr:  expr.MOD expr 

	QUESTION  shift 51
	PLUS  shift 52
	MINUS  shift 53
	MULT  shift 54
	DIV  shift 55
	MOD  shift 64
	AND  shift 56
	OR  shift 57
	EQ  shift 58
	LT  shift 59
	LTE  shift 60
	GT  shift 61
	GTE  shift 62
	NE  shift 63
	.  reduce 46 (src line 159)


state 14
	expr:  prefix_expr.    (61)

	.  reduce 61 (src line 216)


state 15
	prefix_expr:  NOT.prefix_expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	prefix_expr  goto 65
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 16
	prefix_expr:  suffix_expr.    (63)

	.  reduce 63 (src line 221)


state 17
	suffix_expr:  atom.    (64)

	.  reduce 64 (src line 224)


state 18
	atom:  property.    (65)

	.  reduce 65 (src line 227)


state 19
	atom:  IDENTIFIER.    (66)

	.  reduce 66 (src line 229)


state 20
	atom:  INT.    (67)

	.  reduce 67 (src line 231)


state 21
	atom:  REAL.    (68)

	.  reduce 68 (src line 233)


state 22
	atom:  STRING.    (69)

	.  reduce 69 (src line 235)


state 23
	atom:  TRUE.    (70)

	.  reduce 70 (src line 237)


state 24
	atom:  FALSE.    (71)

	.  reduce 71 (src line 239)


state 25
	atom:  LBRACE.named_expression_list RBRACE 

	STRING  shift 68
	.  error

	named_expression_list  goto 66
	named_expression_single  goto 67

state 26
	atom:  LBRACKET.expression_list RBRACKET 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expression  goto 70
	expression_list  goto 69
	expr  goto 13
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 27
	atom:  function_name.LPAREN expression_list RPAREN 

	LPAREN  shift 71
	.  error


state 28
	atom:  LPAREN.expression RPAREN 
	atom:  LPAREN.select_stmt RPAREN 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	SELECT  shift 9
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	select_stmt  goto 73
	expression  goto 72
	select_compound  goto 4
	select_core  goto 6
	select_select  goto 7
	select_select_head  goto 8
	expr  goto 13
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 29
	property:  PROPERTY.    (82)

	.  reduce 82 (src line 290)


state 30
	function_name:  MIN.    (83)

	.  reduce 83 (src line 293)


state 31
	function_name:  MAX.    (84)

	.  reduce 84 (src line 298)


state 32
	function_name:  AVG.    (85)

	.  reduce 85 (src line 303)


state 33
	function_name:  COUNT.    (86)

	.  reduce 86 (src line 308)


state 34
	function_name:  SUM.    (87)

	.  reduce 87 (src line 313)


state 35
	select_compound:  select_core compound_operator.select_compound 

	SELECT  shift 9
	.  error

	select_compound  goto 74
	select_core  goto 6
	select_select  goto 7
	select_select_head  goto 8

state 36
	compound_operator:  UNION.    (19)
	compound_operator:  UNION.ALL 

	ALL  shift 75
	.  reduce 19 (src line 88)


state 37
	compound_operator:  INTERSECT.    (21)

	.  reduce 21 (src line 90)


state 38
	compound_operator:  EXCEPT.    (22)

	.  reduce 22 (src line 91)


state 39
	select_core:  select_select select_from.select_where select_group_having 
	select_where: .    (29)

	WHERE  shift 77
	.  reduce 29 (src line 112)

	select_where  goto 76

state 40
	select_from:  FROM.data_source_list 

	IDENTIFIER  shift 81
	.  error

	data_source_list  goto 78
	data_source_single  goto 79
	data_source  goto 80

state 41
	select_select:  select_select_head select_select_tail.    (38)

	.  reduce 38 (src line 136)


state 42
	select_select_tail:  expression.    (43)
	select_select_tail:  expression.AS IDENTIFIER 

	AS  shift 82
	.  reduce 43 (src line 145)


state 43
	select_select_tail:  AS.IDENTIFIER 

	IDENTIFIER  shift 83
	.  error


state 44
	select_select_head:  SELECT ALL.    (40)

	.  reduce 40 (src line 140)


state 45
	select_select_head:  SELECT DISTINCT.    (41)

	.  reduce 41 (src line 141)


state 46
	select_stmt:  select_compound select_order select_limit_offset.    (4)

	.  reduce 4 (src line 46)


state 47
	select_limit_offset:  select_limit.    (8)
	select_limit_offset:  select_limit.select_offset 

	OFFSET  shift 85
	.  reduce 8 (src line 55)

	select_offset  goto 84

state 48
	select_limit:  LIMIT.expression 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expression  goto 86
	expr  goto 13
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 49
	select_order:  ORDER BY.sorting_list 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expression  goto 89
	sorting_list  goto 87
	sorting_single  goto 88
	expr  goto 13
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 50
	pragma_stmt:  PRAGMA expression ASSIGN.expression 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expression  goto 90
	expr  goto 13
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 51
	expression:  expr QUESTION.expression COLON expression 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expression  goto 91
	expr  goto 13
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 52
	expr:  expr PLUS.expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expr  goto 92
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 53
	expr:  expr MINUS.expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expr  goto 93
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 54
	expr:  expr MULT.expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expr  goto 94
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 55
	expr:  expr DIV.expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expr  goto 95
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 56
	expr:  expr AND.expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expr  goto 96
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 57
	expr:  expr OR.expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expr  goto 97
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 58
	expr:  expr EQ.expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expr  goto 98
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 59
	expr:  expr LT.expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expr  goto 99
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 60
	expr:  expr LTE.expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expr  goto 100
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 61
	expr:  expr GT.expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expr  goto 101
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 62
	expr:  expr GTE.expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expr  goto 102
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 63
	expr:  expr NE.expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expr  goto 103
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 64
	expr:  expr MOD.expr 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expr  goto 104
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 65
	prefix_expr:  NOT prefix_expr.    (62)

	.  reduce 62 (src line 220)


state 66
	atom:  LBRACE named_expression_list.RBRACE 

	RBRACE  shift 105
	.  error


state 67
	named_expression_list:  named_expression_single.    (79)
	named_expression_list:  named_expression_single.COMMA named_expression_list 

	COMMA  shift 106
	.  reduce 79 (src line 275)


state 68
	named_expression_single:  STRING.COLON expression 

	COLON  shift 107
	.  error


state 69
	atom:  LBRACKET expression_list.RBRACKET 

	RBRACKET  shift 108
	.  error


state 70
	expression_list:  expression.    (77)
	expression_list:  expression.COMMA expression_list 

	COMMA  shift 109
	.  reduce 77 (src line 258)


state 71
	atom:  function_name LPAREN.expression_list RPAREN 

	INT  shift 20
	REAL  shift 21
	STRING  shift 22
	IDENTIFIER  shift 19
	PROPERTY  shift 29
	LPAREN  shift 28
	LBRACE  shift 25
	TRUE  shift 23
	FALSE  shift 24
	LBRACKET  shift 26
	MAX  shift 31
	MIN  shift 30
	AVG  shift 32
	COUNT  shift 33
	SUM  shift 34
	NOT  shift 15
	.  error

	expression  goto 70
	expression_list  goto 110
	expr  goto 13
	prefix_expr  goto 14
	suffix_expr  goto 16
	atom  goto 17
	property  goto 18
	function_name  goto 27

state 72
	atom:  LPAREN expression.RPAREN 

	RPAREN  shift 111
	.  error


state 73
	atom:  LPAREN select_stmt.RPAREN 

	RPAREN  shift 112
	.  error


state 74
	select_compound:  select_core compound_operator select_compound.    (18)

	.  reduce 18 (src line 85)
